--- a/miniprogram/assets/css/common.less
+++ b/miniprogram/assets/css/common.less
@@ -9,3 +9,23 @@
 .color-darkgray {
   color: darkgray
 }
+
+.g-bg-white {
+  background-color: white;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.text-primary {
+  color: black
+}
+
+.text-secondary {
+  color: rgb(128, 128, 128);
+}
+
+.text-third {
+  color:rgb(163, 163, 163)
+}
